@@ -1,4 +1,11 @@
 
+* Dec. 29, 2006
+Some recent changes:
+- Switch back-end to RtAudio/RtMidi.
+- Sample loading via libsndfile.
+- bootstrap.sh for Linux, Cygwin, OS X.
+- Loop Dir button to select base directory for file browsers.
+	
 * Jul 1, 2006
 Release 0.2. Have not been keeping this file properly, sorry.
 This version includes many new features:
